feat: fixed grid

--- a/index.html
+++ b/index.html
@@ -363,38 +363,22 @@
         <div class="col-5">
             <section id="featuredMasonry">
             <!-- burned out debug this -->
-            <!--
-            <div class="row">
-                    <div class="col-12">
-                        <img src="https://via.placeholder.com/220.png" class="img-fluid" >
-                    </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="row">
-                            <div class="col-12">
-                                <img src="https://via.placeholder.com/110.png" class="img-fluid" >
-                            </div>
-                            <div class="col-12">
-                                <img src="https://via.placeholder.com/110.png" class="img-fluid" >
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <img src="https://via.placeholder.com/110x220.png" class="img-fluid" >
-                    </div>
-
+            <div class="masonry-wrapper">
+                <div class="img-big">
+                    <img src="" alt="">
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <img src="https://via.placeholder.com/110x110.png" class="img-fluid" >
-                    </div>
-                    <div class="col">
-                        <img src="https://via.placeholder.com/110x110.png" class="img-fluid" >
-                    </div>
+                <div class="img-small">
+                    <img src="" alt="">
+                </div>
+                <div class="img-side"> <img src="" alt="">
+                </div>
+                <div class="img-small">
+                    <img src="" alt="">
                 </div>
 
+                <div class="img-small"><img src="" alt=""></div>
+                <div class="img-small"><img src="" alt=""></div>
             </div>
-            -->
             </section>
         </div>
     </div>
