feat: news item draft

--- a/index.html
+++ b/index.html
@@ -386,15 +386,40 @@
 
 
 <section id="sliderNews">
+<div class="container">
+    <div class="row no-gutters">
+        <div class="col-6">
+            <div class="news-preview">
+                <img src="https://via.placeholder.com/600x300.png" alt="">
+                <span class="title">Title</span>
+                <span class="comment">comment</span>
+                <span class="time">time</span>
+            </div>
 
-</section>
-<footer>
-    <div class="container">
-        <div class="row"></div>
-        <div class="row"></div>
-        <div class="row"></div>
+        </div>
+        <div class="col-3"></div>
+        <div class="col-3"></div>
     </div>
+</div>
+</section>
+<footer class="bg-light text-center text-lg-start" >
+    <div class="container">
+        <div class="row">
+            <div class="col">
 
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
